# rotki-dev-task

./: .flake8  .gitignore  README.md  assets.json  cli.py  main.py  pyproject.toml  requirements.txt  utils.py
src/: cli.py  utils.py
tests/: test_utils.py
