[tool.poetry]
name = "rotki-dev-task"
version = "0.1.0"
description = ""
authors = ["Isaac Adewumi <ienioladewumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
web3 = "^5.28.0"
click = "^8.0.4"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[tool.isort]
force_grid_wrap = 0
use_parentheses = true
combine_as_imports = true
include_trailing_comma = true
line_length = 119
multi_line_output = 3
skip_glob = ["**/.venv/*"]
default_section = "THIRDPARTY"
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.black]
line-length = 119
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
